# espforge

./: .gitignore  Cargo.toml  README.md  TODO_dev.md  dist-workspace.toml  justfile
espforge/: Cargo.toml  LICENSE.md  build.rs  compile.rs  export.rs  lib.rs  manifest.rs  template_utils.rs
espforge/compile/: context.rs  mod.rs  postprocess.rs  scripting.rs  template.rs  validation.rs
espforge/components/: button.ron  button.rs  i2c.ron  i2c.rs  led.ron  led.rs  mod.rs  spi.ron  spi.rs  uart.ron  uart.rs
espforge/config/: app.rs  components.rs  devices.rs  esp32.rs  example.rs  mod.rs  project.rs
espforge/devices/ili9341/: Cargo.toml  device.ron  device.rs
espforge/devices/ssd1306/: Cargo.toml  device.ron  device.rs
espforge/esp32metadata/: esp32c3.toml
espforge/generate/: cargo.rs  espgenerate.rs  manifest.rs  mod.rs  operations.rs
espforge/globals/: async_signal.ron  async_signal.rs  delay.ron  delay.rs  log.ron  log.rs  mod.rs  queue.ron
espforge/nibblers/: app.rs  components.rs  esp32.rs  mod.rs  project.rs  template.rs
espforge/platform/: gpio.rs  i2c.rs  mod.rs  spi.rs  uart.rs
espforge/resolver/: mod.rs  ruchy_bridge.rs
espforge/resolver/actions/: component.rs  global.rs  logic.rs  mod.rs
espforge/resolver/strategies/: component.rs  gpio.rs  hardware.rs  i2c.rs  mod.rs  spi.rs  uart.rs  utils.rs  views.rs
espforge/src/: lib.rs
espforge/src/cli/: mod.rs  model.rs
espforge/src/cli/commands/: compile.rs  examples.rs  mod.rs
espforge/src/cli/interactive/: catalog.rs  dialoguer.rs  dialoguer_wrapper.rs  mock.rs  mod.rs
espforge/src/codegen/: components.rs  espgenerate.rs  mod.rs
espforge/src/compile/: assets.rs  dependencies.rs  generators.rs  mod.rs
espforge/src/examples/: builder.rs  config.rs  fs.rs  mod.rs  template.rs  ui.rs
espforge/src/examples/01.Basics/minimal/: example.yaml
espforge/src/parse/: app.rs  components.rs  devices.rs  esp32.rs  mod.rs  model.rs  processor.rs  project.rs
espforge/src/resolve/: mod.rs
espforge/src/validate/esp32metadata/: chip.rs  esp32c3.toml  espressif-esp32s3-devkitm1.rs  espressif-esp32s3-devkitm1.toml
espforge/templates/01.Basics/blink/: app.ruchy  example.yaml
espforge/templates/01.Basics/blink_no_ruchy/: config.rs  diagram.json  example.yaml
espforge/templates/01.Basics/helloworld/: app.ruchy  config.rs  example.yaml
espforge/templates/01.Basics/minimal/: app.ruchy  example.yaml  wokwi.toml.tera
espforge/templates/02.Digital/button/: app.ruchy  diagram.json
espforge/templates/02.Digital/button_async/: app.ruchy  example.yaml
espforge/templates/04.Communication/i2c_scanner/: app.ruchy  chip.json  chip.wasm  diagram.json  example.yaml
espforge/templates/04.Communication/spi/: chip.json  diagram.json  example.yaml
espforge/templates/04.Communication/spi/chip/: justfile
espforge/templates/04.Communication/spi_example/: app.ruchy  chip.wasm  example.yaml  wokwi.toml.tera
espforge/templates/04.Communication/spi_example/chip/: chip.zig  wokwi-api.zig
espforge/templates/04.Communication/uart/: chip.json  diagram.json
espforge/templates/04.Communication/uart_example/: app.ruchy  chip.wasm  example.yaml
espforge/templates/04.Communication/uart_example/chip/: chip.zig
espforge/templates/06.Displays/ili9341/: app.ruchy  diagram.json  example.yaml
espforge/templates/06.Displays/ili9341_example/: config.rs  example.yaml
espforge/templates/06.Displays/ssd1306/: config.rs  diagram.json  example.yaml
espforge/templates/06.Displays/ssd1306_example/: Cargo.toml  app.ruchy  example.yaml  wokwi.toml.tera
espforge/templates/_dynamic/: Cargo.toml.tera  config.rs
espforge/templates/_dynamic/src/: lib.rs
espforge_codegen/: Cargo.toml
espforge_codegen/src/: lib.rs  scaffold.rs
espforge_codegen/src/builders/: gpio.rs  i2c.rs  mod.rs  spi.rs
espforge_codegen/src/component_builders/: button.rs  i2c_device.rs  led.rs  mod.rs  spi_device.rs  uart_device.rs
espforge_codegen/src/generator/: components.rs  context.rs  hardware.rs  mod.rs  utils.rs
espforge_common/: Cargo.toml
espforge_common/src/: lib.rs
espforge_devices/: Cargo.toml
espforge_devices/src/: lib.rs
espforge_devices/src/devices/ssd1306/: Cargo.toml  device.rs
espforge_dialogue/: Cargo.toml
espforge_dialogue/src/: lib.rs
espforge_dialogue/tests/: macros.rs
espforge_esp32metadata/: Cargo.toml
espforge_examples/: Cargo.toml  dependencies.toml
espforge_examples/examples/01.Basics/blink/: diagram.json  example.yaml
espforge_examples/examples/01.Basics/blink/app/rust/: app.rs
espforge_examples/examples/01.Basics/helloworld/: example.yaml
espforge_examples/examples/01.Basics/minimal/: example.yaml
espforge_examples/examples/02.Digital/button/: diagram.json  example.yaml
espforge_examples/examples/04.Communication/i2c_scanner/: example.yaml
espforge_examples/examples/04.Communication/i2c_scanner/chip/: chip.zig
espforge_examples/examples/04.Communication/spi_example/: example.yaml
espforge_examples/examples/04.Communication/uart_example/: example.yaml  wokwi.toml
espforge_examples/src/: lib.rs
espforge_macros/: Cargo.toml
espforge_macros/src/: lib.rs
espforge_platform/: Cargo.toml
espforge_platform/assets/: lib.rs
espforge_platform/assets/bus/: mod.rs
espforge_platform/assets/components/: mod.rs
espforge_platform/assets/components/button/: mod.rs
espforge_platform/assets/components/i2c/: mod.rs
espforge_platform/assets/components/led/: mod.rs
espforge_platform/assets/components/spi/: mod.rs
espforge_platform/assets/components/uart/: mod.rs
espforge_platform/assets/delay/: mod.rs
espforge_platform/assets/gpio/: async.rs  blocking.rs  mod.rs
espforge_platform/assets/i2c/: mod.rs
espforge_platform/assets/logger/: mod.rs
espforge_platform/assets/spi/: mod.rs
espforge_platform/assets/uart/: blocking.rs  mod.rs
espforge_platform/src/: lib.rs
espforge_platform/src/logger/: mod.rs
espforge_python_app/: Cargo.toml
espforge_rust_app/: Cargo.toml
espforge_rust_app/src/: lib.rs
espforge_templates/: Cargo.toml
espforge_templates/src/: lib.rs
(+9 files in other folders)
