[package]
name = "espforge"
version = "0.1.3"
include = [
    "build.rs",
    "compile",
    "components",
    "config",
    "devices",
    "export.rs",
    "generate",
    "globals",
    "lib.rs",
    "LICENSE", 
    "manifest.rs",
    "nibblers",
    "platform",
    "README.md",
    "resolver",
    "src", 
    "templates", 
    "template_utils.rs",
]
edition = "2024"
description = "A scaffolding++ project generator for ESP32 projects"
license = "MIT"
keywords     = ["esp32", "template"]
categories   = ["command-line-utilities", "template-engine"]
repository = "https://github.com/mohankumargupta/espforge"
readme = "../README.md"

[lib]
name = "espforge_lib"
path = "lib.rs"

[[bin]]
name = "espforge"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
espforge_macros = { version = "0.1.0", path = "../espforge_macros" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
include_dir = { version = "0.7.4", features = ["glob"] }
tera = "1.20.1"
toml = { version = "0.9", features = ["preserve_order"] }
ron = "0.12"
serde_yaml_ng = "0.10"
ruchy = {version = "3", default-features = false}
inventory = "0.3"
toml_edit = "0.23"
log = "0.4"

# CLI Specific Dependencies (Optional)
clap = { version = "4.5", features = ["derive"], optional = true }
dialoguer = { version = "0.12", optional = true }

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
predicates = "3.1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:dialoguer"]

