[package]
name = "espforge"
version = "0.1.3"
include = [
    "LICENSE.md",
    "README.md",
    "src", 
]
edition = "2024"
description = "A scaffolding++ project generator for ESP32 projects"
license = "MIT"
keywords     = ["esp32", "template"]
categories   = ["command-line-utilities", "template-engine"]
repository = "https://github.com/mohankumargupta/espforge"
readme = "../README.md"

[lib]
name = "espforge_lib"
path = "src/lib.rs"

[[bin]]
name = "espforge"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
espforge_dialogue = { version = "0.1.0", path = "../espforge_dialogue" }
espforge_examples = { version = "0.1.0", path = "../espforge_examples" }
espforge_macros = { version = "0.1.0", path = "../espforge_macros" }
espforge_templates = { version = "0.1.0", path = "../espforge_templates" }
espforge_python_app = { version = "0.1.0", path = "../espforge_python_app" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
include_dir = { version = "0.7.4", features = ["glob"] }
toml = { version = "0.9", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
inventory = "0.3"
toml_edit = "0.23"
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2" 
syn = { version = "2.0", features = ["full", "parsing"] }

# CLI Specific Dependencies (Optional)
clap = { version = "4.5", features = ["derive"], optional = true }
dialoguer = { version = "0.12", optional = true }
dialogue-macro = {version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
predicates = "3.1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:dialoguer", "dep:dialogue-macro"]

