[package]
name = "espforge_templates"
version = "0.1.0"
edition = "2024"
description = "Templates for espforge"
license = "MIT"

[dependencies]
include_dir = { version = "0.7.4", features = ["glob"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2" 
syn = { version = "2.0", features = ["full", "parsing"] }

